--- a/app/src/main/res/layout/activity_payment_wallet.xml
+++ b/app/src/main/res/layout/activity_payment_wallet.xml
@@ -36,25 +36,48 @@
         android:layout_marginTop="30dp"
         android:fontFamily="sans-serif" />
 
-    <!-- Payment Details -->
-    <TextView
-        android:id="@+id/tvPaymentDetails"
+    <LinearLayout
+        android:id="@+id/paymentinfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="2 items | Total Payment: Rs. 90"
-        android:textSize="14sp"
-        android:textColor="@color/black"
-        android:fontFamily="sans-serif"
-        android:layout_below="@id/tvPaymentTitle"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="4dp"/>
+        android:layout_below="@+id/tvPaymentTitle">
+
+        <!-- Payment Details -->
+        <TextView
+            android:id="@+id/tvPaymentDetails"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Total Payment: "
+            android:textSize="16sp"
+            android:textColor="@color/black"
+            android:fontFamily="sans-serif"
+            android:layout_below="@id/tvPaymentTitle"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="4dp"/>
+
+        <TextView
+            android:id="@+id/tvPaymentamt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textSize="16sp"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:fontFamily="sans-serif"
+            android:layout_below="@id/tvPaymentTitle"
+            android:layout_toEndOf="@id/tvPaymentDetails"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="4dp"/>
+
+    </LinearLayout>
 
     <!-- Step Progress Layout -->
     <LinearLayout
         android:id="@+id/stepProgressLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tvPaymentDetails"
+        android:layout_below="@id/paymentinfo"
         android:layout_marginTop="30dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
@@ -284,13 +307,26 @@
                         android:id="@+id/tvAvailableBalance"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Available Balance: Rs. 100"
+                        android:text="Available Balance: "
                         android:textSize="13sp"
                         android:fontFamily="sans-serif"
                         android:textColor="@color/black"
                         android:layout_below="@id/imgWallet"
                         android:layout_alignStart="@id/imgWallet"
-                        android:paddingTop="7dp"/>
+                        android:paddingTop="10dp"/>
+
+                    <TextView
+                        android:id="@+id/tvbalanceamt"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text=""
+                        android:textSize="13sp"
+                        android:fontFamily="sans-serif"
+                        android:textColor="@color/black"
+                        android:layout_below="@id/imgWallet"
+                        android:textStyle="bold"
+                        android:layout_toEndOf="@+id/tvAvailableBalance"
+                        android:paddingTop="10dp"/>
 
                     <!-- PIN Boxes -->
                     <LinearLayout
@@ -298,7 +334,7 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         android:layout_below="@id/tvAvailableBalance"
-                        android:layout_marginTop="4dp"
+                        android:layout_marginTop="10dp"
                         android:layout_alignStart="@id/imgWallet" >
 
                         <!-- Enter Pin -->
