--- a/app/src/main/res/layout/activity_category_item.xml
+++ b/app/src/main/res/layout/activity_category_item.xml
@@ -2,7 +2,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="160dp"
-    android:layout_height="180dp"
+    android:layout_height="wrap_content"
     app:cardCornerRadius="4dp"
     app:cardElevation="8dp"
     android:id="@+id/cardView"
