--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -43,7 +43,7 @@
             android:id="@+id/greetingname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Harini!"
+            android:text=""
             android:textColor="#0F0F0F"
             android:textSize="24sp"
             android:textStyle="bold"
@@ -96,8 +96,8 @@
             <!-- Search Text -->
             <TextView
                 android:id="@+id/search_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
                 android:text="Search your favourite food"
                 android:textColor="#5A5A5A"
                 android:textSize="16sp"
@@ -107,18 +107,20 @@
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
 
-    <RelativeLayout
-        android:id="@+id/CategoriesRelative"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/search_bar"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp">
+        android:layout_height="match_parent"
+        android:layout_below="@id/search_bar"
+        android:paddingBottom="70dp"
+        android:fillViewport="true">
 
-        <ScrollView
+        <RelativeLayout
+            android:id="@+id/CategoriesRelative"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fillViewport="true">
+            android:layout_below="@+id/search_bar"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -145,8 +147,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:nestedScrollingEnabled="false"
-                    android:scrollbars="vertical"
-                    android:paddingBottom="16dp" />
+                    android:paddingBottom="8dp" />
 
                 <!-- Today's Bestsellers Title -->
                 <TextView
@@ -157,7 +158,7 @@
                     android:textSize="20sp"
                     android:textStyle="bold"
                     android:textColor="#000000"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="8dp"
                     android:layout_marginBottom="8dp" />
 
                 <!-- Horizontal RecyclerView for Bestsellers -->
@@ -166,14 +167,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:scrollbars="horizontal"
-                    android:paddingBottom="120dp"
+                    android:paddingBottom="60dp"
                     android:nestedScrollingEnabled="false" />
 
             </LinearLayout>
-        </ScrollView>
 
-    </RelativeLayout>
+        </RelativeLayout>
+
+    </ScrollView>
 
     <!-- Bottom Navigation Bar -->
     <androidx.cardview.widget.CardView
