--- a/app/src/main/res/layout/activity_invoice.xml
+++ b/app/src/main/res/layout/activity_invoice.xml
@@ -48,19 +48,80 @@
         android:layout_alignParentEnd="true"
         android:layout_alignTop="@id/tvInvoiceTitle"/>
 
-    <!-- Order Number -->
-    <TextView
-        android:id="@+id/tvOrderNumber"
+
+    <LinearLayout
+        android:id="@+id/ordernumtxt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_below="@id/tvInvoiceTitle"
+        android:gravity="center_horizontal" >
+
+        <!-- Order Number -->
+        <TextView
+            android:id="@+id/tvOrdertxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Order No: "
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:layout_below="@id/tvInvoiceTitle"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="8dp"
+            android:fontFamily="sans-serif" />
+
+        <TextView
+            android:id="@+id/tvOrdernumber"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:layout_toEndOf="@+id/tvOrdertxt"
+            android:layout_below="@id/tvInvoiceTitle"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="8dp"
+            android:fontFamily="sans-serif" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/paymentinfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Order No. 1124"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:layout_below="@id/tvInvoiceTitle"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="8dp"
-        android:fontFamily="sans-serif" />
+        android:layout_below="@+id/ordernumtxt">
+
+        <!-- Payment Details -->
+        <TextView
+            android:id="@+id/tvPaymentDetails"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Total Payment: "
+            android:textSize="16sp"
+            android:textColor="@color/black"
+            android:fontFamily="sans-serif"
+            android:layout_below="@id/tvPaymentTitle"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="4dp"/>
+
+        <TextView
+            android:id="@+id/tvPaymentamt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textSize="16sp"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:fontFamily="sans-serif"
+            android:layout_below="@id/tvPaymentTitle"
+            android:layout_toEndOf="@id/tvPaymentDetails"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="4dp"/>
+
+    </LinearLayout>
 
     <!-- Invoice Image -->
     <ImageView
@@ -68,20 +129,142 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:src="@drawable/invoice_img"
-        android:layout_below="@id/tvOrderNumber"
+        android:layout_below="@id/paymentinfo"
         android:layout_marginTop="15dp"
         android:layout_centerHorizontal="true"/>
+
+    <RelativeLayout
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/stepindicator"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:layout_below="@id/imgInvoice" >
+
+        <!-- Step Indicators -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="3"
+            android:gravity="center">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/status1"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:background="@drawable/circle_gray"
+                    android:text="1"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:gravity="center"
+                    android:textColor="@color/black"/>
+
+                <TextView
+                    android:id="@+id/statusLabel1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Order Placed"
+                    android:textSize="12dp"
+                    android:textColor="@color/black"
+                    android:gravity="center"
+                    android:layout_marginTop="5dp"/>
+            </LinearLayout>
+
+            <View
+                android:layout_width="40dp"
+                android:layout_height="3dp"
+                android:layout_marginBottom="15dp"
+                android:background="@color/grey"
+                android:layout_gravity="center"/>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/status2"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:background="@drawable/circle_gray"
+                    android:text="2"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:gravity="center"
+                    android:textColor="@color/black"/>
+
+                <TextView
+                    android:id="@+id/statusLabel2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Preparing"
+                    android:textSize="12dp"
+                    android:textColor="@color/black"
+                    android:gravity="center"
+                    android:layout_marginTop="5dp"/>
+            </LinearLayout>
+
+            <View
+                android:layout_width="40dp"
+                android:layout_height="3dp"
+                android:background="@color/grey"
+                android:layout_marginBottom="15dp"
+                android:layout_gravity="center"/>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/status3"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:background="@drawable/circle_gray"
+                    android:text="3"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:gravity="center"
+                    android:textColor="@color/black"/>
+
+                <TextView
+                    android:id="@+id/statusLabel3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Ready"
+                    android:textSize="12dp"
+                    android:textColor="@color/black"
+                    android:gravity="center"
+                    android:layout_marginTop="5dp"/>
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </RelativeLayout>
 
     <!-- Recycler View for items -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewItems"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/imgInvoice"
+        android:layout_below="@id/stepindicator"
         android:layout_marginTop="20dp"
         android:layout_marginRight="13dp"
         android:layout_marginLeft="13dp"
         android:paddingBottom="100dp"
+        android:visibility="visible"
         android:scrollbars="vertical"/>
 
     <!-- Bottom Navigation Bar -->
@@ -103,7 +286,6 @@
             android:background="@drawable/bottomnav_background"
             app:menu="@menu/bottomnav_menu"
             android:paddingTop="5dp"
-            android:layout_marginBottom="-10dp"
             app:itemIconTint="@drawable/item_selector"
             app:itemTextColor="@drawable/item_selector"
             style="@style/NoRippleEffect"
