--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -97,7 +97,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_gravity="center_vertical"
-                    android:text="Richard Jones"
+                    android:text=""
                     android:textSize="16sp"
                     android:textColor="@android:color/black" />
             </LinearLayout>
@@ -120,7 +120,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_gravity="center_vertical"
-                    android:text="70412110223"
+                    android:text=""
                     android:textSize="16sp"
                     android:textColor="@android:color/black" />
             </LinearLayout>
@@ -143,7 +143,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_gravity="center_vertical"
-                    android:text="+91 1234567890"
+                    android:text=""
                     android:textSize="16sp"
                     android:textColor="@android:color/black" />
             </LinearLayout>
