--- a/app/src/main/res/layout/bestseller_item.xml
+++ b/app/src/main/res/layout/bestseller_item.xml
@@ -1,11 +1,11 @@
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="120dp"
-    android:layout_height="150dp"
+    android:layout_width="160dp"
+    android:layout_height="wrap_content"
     app:cardCornerRadius="4dp"
     app:cardElevation="8dp"
-    android:layout_margin="8dp">
+    android:layout_margin="12dp">
 
     <LinearLayout
         android:layout_width="match_parent"
