--- a/app/src/main/res/layout/cart.xml
+++ b/app/src/main/res/layout/cart.xml
@@ -448,17 +448,18 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-
                             android:layout_weight="1"
                             android:fontFamily="sans-serif-medium"
                             android:text="Sub Total"
+                            android:textStyle="bold"
                             android:textColor="@color/black"
                             android:textSize="20sp" />
 
                         <TextView
+                            android:id="@+id/cartsubtotaltv"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Rs. 90.00"
+                            android:text=""
                             android:textSize="20sp"
                             android:fontFamily="sans-serif-medium"
                             android:textColor="@color/black" />
@@ -483,10 +484,12 @@
                             android:textSize="20sp" />
 
                         <TextView
+                            android:id="@+id/carttotaltv"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Rs. 90.00"
+                            android:text=""
                             android:textSize="20sp"
+                            android:textStyle="bold"
                             android:fontFamily="sans-serif-medium"
                             android:textColor="@color/black" />
                     </LinearLayout>
