--- a/app/src/main/res/layout/favorites.xml
+++ b/app/src/main/res/layout/favorites.xml
@@ -51,10 +51,26 @@
         android:scrollbars="vertical"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:spanCount="2"
-        android:clipToPadding="false"
+        android:layout_margin="10dp"
+        android:padding="5dp"
         android:layout_below="@+id/subtitle"
         android:layout_marginTop="30dp"
         android:paddingBottom="8dp"/>
+
+    <!-- "No Favorites" Message -->
+    <TextView
+        android:id="@+id/emptyFavoritesText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="No Favorites Yet"
+        android:textSize="18sp"
+        android:textColor="@color/black"
+        android:visibility="gone"
+        android:layout_centerInParent="true"
+        android:layout_below="@id/recyclerViewFavorites"
+        android:textAlignment="center"
+        android:fontFamily="sans-serif"/>
+
 
     <!-- Bottom Navigation Bar -->
     <androidx.cardview.widget.CardView
@@ -75,7 +91,6 @@
             android:background="@drawable/bottomnav_background"
             app:menu="@menu/bottomnav_menu"
             android:paddingTop="5dp"
-            android:layout_marginBottom="-10dp"
             app:itemIconTint="@drawable/item_selector"
             app:itemTextColor="@drawable/item_selector"
             style="@style/NoRippleEffect"
