--- a/app/src/main/res/layout/item_order_history.xml
+++ b/app/src/main/res/layout/item_order_history.xml
@@ -20,40 +20,55 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="8dp"
+            android:padding="12dp"
             android:background="#950606">
 
-        <!-- Order date/time -->
-        <TextView
-            android:id="@+id/tvOrderDateTime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="February 28, 2025 | 13:26 PM"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            android:textSize="14sp"/>
 
-        <!-- Status text (e.g., Completed) -->
-        <TextView
-            android:id="@+id/tvOrderStatus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="4dp"
-            android:text="Completed"
-            android:textColor="@android:color/white"
-            android:textSize="13sp" />
+            <!-- Order date/time -->
+            <TextView
+                android:id="@+id/tvOrderDateTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textStyle="bold"
+                android:textSize="14sp"
+                android:textColor="@color/white"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true" />
 
-        <!-- Status icon -->
-        <ImageView
-            android:id="@+id/imgOrderStatus"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="4dp"
-            android:layout_marginTop="20dp"
-            android:src="@drawable/ic_check_circle" />
-    </RelativeLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="4dp"
+                android:layout_alignParentTop="true">
+
+                <!-- Status text (e.g., Completed) -->
+                <TextView
+                    android:id="@+id/tvOrderStatus"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textColor="@android:color/white"
+                    android:textSize="16sp"
+                    android:layout_gravity="center_vertical" />  <!-- Center text vertically -->
+
+                <!-- Status icon -->
+                <ImageView
+                    android:id="@+id/imgOrderStatus"
+                    android:layout_width="18dp"
+                    android:layout_height="18dp"
+                    android:layout_marginLeft="4dp"
+                    android:src="@drawable/ic_check_circle"
+                    android:layout_gravity="center_vertical" /> <!-- Align image vertically with text -->
+
+            </LinearLayout>
+
+
+
+        </RelativeLayout>
 
         <!-- Container for multiple items -->
         <LinearLayout
