--- a/app/src/main/res/layout/wallet_display.xml
+++ b/app/src/main/res/layout/wallet_display.xml
@@ -69,7 +69,7 @@
             android:id="@+id/walletBalanceAmount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Rs. 0.00"
+            android:text=""
             android:textSize="20dp"
             android:textStyle="bold"
             android:textColor="@color/dark_red"
